# Painel

./: .gitignore  Novo(a)  package.json  teste
backend/: Cargo.toml
backend/data/: plc_config.db
backend/src/: database.rs  main.rs  tcp_server.rs  web_server.rs
data/: plc_config.db
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AddBitConfigForm.tsx  AddVideoForm.tsx  EditBitModal.tsx  Header.tsx  LEDPreview.tsx  Sidebar.tsx  TemplateEditor.tsx  Toast.tsx  VisualizationPanel.tsx  index.ts
frontend/src/hooks/: usePlcData.ts
frontend/src/pages/: PaginaBits.tsx  PaginaPublicidade.tsx  PaginaVisaoGeral.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: templateParser.ts
