[package]
name = "plc-backend"
version = "0.1.0"
description = "PLC Backend Server - EDP Industrial"
authors = ["you"]
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
futures = "0.3"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
